<resources>
    <string name="app_name">Kataleko Agenda</string>
    <string name="novo_contacto">Novo Contacto</string>
    <string name="nome">Nome</string>
    <string name="telefone">Telefone</string>
    <string name="telefone_2">Telefone 2</string>
    <string name="endere_o">Endereço</string>
    <string name="email">Email</string>
    <string name="salvar">Salvar</string>
    <string name="cancelar">Cancelar</string>
    <string name="voltar">Voltar</string>
    <string name="editar">Editar</string>
    <string name="mapa">Mapa</string>
    <string name="ligar">Ligar</string>
</resources>