<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activities.ShowContactoActivity">

    <TextView
        android:gravity="center"
        android:textColor="@color/purple_700"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Detalhes do contacto..."
        android:textSize="30sp"
        android:layout_marginBottom="20dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nome"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etEditName"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/telefone"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etEditPhone1"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/telefone_2"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etEditPhone2"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/endere_o"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etEditAddress"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/email"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/etEditEmail"
        />

    <Button
        android:paddingHorizontal="35dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnShowContactoEditarEliminar"
        android:text="Editar/Eliminar"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/ligar"
            android:id="@+id/btnLigar"
            />


        <Button
            android:layout_width="0dp"
            android:layout_marginLeft="10dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:id="@+id/btnEmail"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="12dp"
        android:visibility="gone"
        android:id="@+id/llBotoes"
        >
        <Button
            android:paddingHorizontal="35dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/btnShowContactoSalvar"
            android:text="@string/salvar"/>

        <Button
            android:layout_marginLeft="10dp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:id="@+id/btnShowContactoDelete"
            android:text="Eliminar"/>
    </LinearLayout>
</LinearLayout>